--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,6 +10,15 @@
     tools:showIn="@layout/app_bar_home"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/dateDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/date"
+        android:layout_marginStart="113dp"
+        android:text="Date.."
+        android:textSize="39dp" />
     <Button
         android:id="@+id/date"
         android:layout_width="wrap_content"
@@ -20,4 +29,47 @@
         android:layout_marginEnd="15dp"
         android:onClick="getDate"
         android:text="Date" />
+
+    <Button
+        android:id="@+id/post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/dateDisplay"
+        android:layout_alignEnd="@+id/dateDisplay"
+        android:layout_marginBottom="34dp"
+        android:text="Post"
+        android:onClick="post"/>
+
+    <Spinner
+        android:id="@+id/region"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/post"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp" />
+
+    <Spinner
+        android:id="@+id/commodity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/center"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="37dp"
+        android:layout_marginStart="15dp" />
+
+    <Spinner
+        android:id="@+id/center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
+
+    <TextView
+        android:id="@+id/predictedPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
 </RelativeLayout>
