--- a/app/src/main/res/layout/contribute.xml
+++ b/app/src/main/res/layout/contribute.xml
@@ -5,9 +5,11 @@
     tools:context="com.example.shophine.rakshak.Contribute">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Contribute" />
+        android:layout_height="wrap_content"
+        android:id="@+id/rvNews">
+    </android.support.v7.widget.RecyclerView>
+
 
 </FrameLayout>
