--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -28,7 +28,7 @@
             <item
                 android:id="@+id/chatbot"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Chat Bot" />
+                android:title="Queries" />
             <item
                 android:id="@+id/nearbyCentre"
                 android:icon="@drawable/ic_menu_send"
