--- a/app/src/main/res/layout/chatbot.xml
+++ b/app/src/main/res/layout/chatbot.xml
@@ -5,9 +5,24 @@
     tools:context="com.example.shophine.rakshak.Chatbot">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Chatbot" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/query"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Submit your query here...."/>
+
+        <Button
+            android:layout_marginTop="55dp"
+            android:layout_marginLeft="140dp"
+            android:id="@+id/querySubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit" />
+
+    </LinearLayout>
 
 </FrameLayout>
