--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -24,7 +24,7 @@
             <item
                 android:id="@+id/contribute"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Contribute" />
+                android:title="News" />
             <item
                 android:id="@+id/chatbot"
                 android:icon="@drawable/ic_menu_send"
